--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -30,3 +30,7 @@ play.evolutions.enabled = true
 
 # Filters
 # ~~~~~
+
+# Modules
+# ~~~~~
+#play.modules.enabled += "play.modules.swagger.SwaggerModule"
