--- a/server/conf/production.conf
+++ b/server/conf/production.conf
@@ -15,3 +15,7 @@ play.filters.hosts {
 
 play.http.secret.key="xH^qBl/`RSdEBFOJacDq6ltg/e;QZ><IM_5SD;GdZ=va[=NHB>6Q@053JB[VdXM`"
 play.http.secret.key=${?APPLICATION_SECRET}
+
+# Modules
+# ~~~~~
+#play.modules.enabled -= "play.modules.swagger.SwaggerModule"
